--- a/action/index.html
+++ b/action/index.html
@@ -48,14 +48,20 @@
         <h1 id="image-count"></h1>
 
     </div>
-    <div>
+    <div style="width: 100%;align-items: center;gap: 6px">
 
+        <div style="display:flex;">
         <label for="height">縦</label>
-        <input type="number" id="height" value="90">
+        <input type="number" id="height" value="90" size="5">
         <label for="width">横</label>
-        <input type="number" id="width" value="120">
+        <input type="number" id="width" value="120" size="5">
         <div>
             <button id="changeSize">サイズを変える</button>
+        </div>
+        </div>
+        <div style="display: flex;margin: 10px;width: 100%;">
+            <div style="flex: 1;border: solid 1px #ccc"><label>フォルダ名指定:<input type="text" value="" id="folder"></label></div>
+            <div style="flex: 1;border: solid 1px #ccc"><label>ファイル名:<input type="text" value="image" id="file"></label></div>
         </div>
     </div>
 </div>
