ダウンロードサイズが小さいままでされてしまう点を修正

--- a/action/index.html
+++ b/action/index.html
@@ -32,7 +32,8 @@
             padding: 10px;
             padding-bottom: 0;
             margin-left:-1px;
-            margin-bottom:-1px
+            margin-bottom:-1px;
+            width: 25%;
         }
 
         .button {
