サイズを記憶するようにした

--- a/action/index.html
+++ b/action/index.html
@@ -106,14 +106,14 @@
         <div style="display:flex; justify-content:right; gap:1em;align-items: center">    <p>ダウンロードサイズを指定</p>
             <div>
                 <label for="height">縦</label>
-                <input type="number" id="height" value="90" size="3">px
+                <input type="number" id="height" min="0" size="3">px
             </div>
             <div>
                 ×
             </div>
             <div>
                 <label for="width">横</label>
-                <input type="number" id="width" value="120" size="3">px
+                <input type="number" id="width" min="0" size="3">px
             </div>
         <div style="display: none">
             <button id="changeSize">サイズを変える</button>
