複数選択を実装。

--- a/action/index.html
+++ b/action/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        *{
+        * {
             box-sizing: border-box;
         }
 
@@ -13,10 +13,11 @@
             min-height: 300px;
             margin: 0;
             padding: 6px;
-            padding-bottom: 7em;
+            padding-bottom: 8em;
 
 
         }
+
         .gallery {
             display: flex;
 
@@ -31,8 +32,8 @@
             border: solid 1px;
             padding: 10px;
             padding-bottom: 0;
-            margin-left:-1px;
-            margin-bottom:-1px;
+            margin-left: -1px;
+            margin-bottom: -1px;
             width: 25%;
         }
 
@@ -54,7 +55,7 @@
             opacity: 0.6;
         }
 
-        .gallery .image-group .canvas-wrap{
+        .gallery .image-group .canvas-wrap {
             padding-bottom: 6px;
             display: flex;
             justify-content: center;
@@ -63,40 +64,52 @@
             min-height: 96px;
         }
 
-        [type=number]{
+        [type=number] {
             width: 7em;
             text-align: right;
         }
-        .image-group_header{
+
+        .image-group_header {
             display: flex;
             justify-content: space-between;
             width: 100%;
             padding-bottom: 6px;
         }
-        .informationTableWrapper{
+
+        .informationTableWrapper {
             width: calc(100% + 20px);
             transform: translateX(-10px);
 
         }
-        .informationTable{
+
+        .informationTable {
             width: 100%;
             border-collapse: collapse;
         }
-        .informationTable th{
+
+        .informationTable th {
             text-align: left;
             background: #ffd5af;
         }
-        .informationTable td{
+
+        .informationTable td {
             text-align: right;
         }
-        .informationTable th,.informationTable td{
+
+        .informationTable th, .informationTable td {
             padding: 3px;
             border: solid 1px #ccc;
         }
-        .eventBtnWrap{display: flex;gap:3px;margin: 3px;
+
+        .eventBtnWrap {
+            display: flex;
+            gap: 3px;
+            margin: 3px;
             width: calc(100% + 14px);
-            transform: translateX(-10px);}
-        .eventBtnWrap>div{
+            transform: translateX(-10px);
+        }
+
+        .eventBtnWrap > div {
             flex: 1;
             text-align: center;
             border-radius: 3px;
@@ -109,15 +122,110 @@
             transition: opacity .3s;
         }
 
-        .eventBtnWrap>div:hover{
+        .eventBtnWrap > div:hover {
             opacity: 0.7;
         }
-        .eventBtnWrap>div:first-child{
+
+        .eventBtnWrap > div:first-child {
             background: #00bcd4;
         }
+
+        .fixFooter .eventBtnWrap {
+            width: auto;
+            transform: none;
+            margin: 0;
+        }
+
+        #modeParent[data-mode="single"] .fixFooter .eventBtnWrap {
+            display: none;
+        }
+
+
+        #modeParent[data-mode="single"] .modeBtns[data-mode="multiple"] {
+            display: none;
+        }
+
+        #modeParent[data-mode="multiple"] .modeBtns[data-mode="single"] {
+            display: none;
+        }
+
+        #modeParent[data-mode="multiple"] .image-group.selected {
+            background-color: rgb(129, 220, 207);
+        }
+
+        #modeParent[data-mode="multiple"] .image-group.selected .multipleActiveImg {
+            opacity: .8;
+        }
+
+        .multipleTxt {
+            text-align: center;
+            margin: 3px;
+        }
+
+        .modeWrap {
+            padding: 3px;
+            display: flex;
+            justify-content: flex-end;
+            gap: 3px;
+            align-items: center;
+        }
+
+        .modeWrap_field {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .mode {
+            padding: 3px;
+            border: solid 1px #00bcd4;
+            text-align: center;
+            min-width: 8em;
+            color: #00bcd4;
+            cursor: pointer;
+            transition: color .3s, background-color .3s;
+        }
+
+        [data-mode="single"] .mode[data-mode="single"] {
+            background: #00bcd4;
+            color: white;
+        }
+
+        [data-mode="multiple"] .mode[data-mode="multiple"] {
+            background: #00bcd4;
+            color: white;
+        }
+
+        [data-mode="multiple"] .canvas-wrap {
+            cursor: pointer;
+            position: relative;
+        }
+
+        canvas {
+            position: relative;
+        }
+
+        [data-mode="multiple"] .multipleActiveImg {
+            display: block;
+            opacity: 0;
+            transition: opacity .1s;
+            width: 75px;
+            height: auto;
+            position: absolute;
+            z-index: 10;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+
+        [data-mode="single"] .multipleActiveImg {
+            display: none;
+        }
+
     </style>
 </head>
-<body>
+<body id="modeParent" data-mode="single">
 <div style="display: flex;justify-content:center;flex-wrap: wrap">
 
     <div style="width: 100%;text-align: center;border-bottom: solid 2px #00bcd4">
@@ -125,7 +233,8 @@
     </div>
     <div style="width: 100%;align-items: center;gap: 6px">
 
-        <div style="display:flex; justify-content:right; gap:1em;align-items: center">    <p>ダウンロードサイズを指定</p>
+        <div style="display:flex; justify-content:right; gap:1em;align-items: center">
+            <p>ダウンロードサイズを指定</p>
             <div>
                 <label for="height">縦</label>
                 <input type="number" id="height" min="0" size="3">px
@@ -137,9 +246,15 @@
                 <label for="width">横</label>
                 <input type="number" id="width" min="0" size="3">px
             </div>
-        <div style="display: none">
-            <button id="changeSize">サイズを変える</button>
+            <div style="display: none">
+                <button id="changeSize">サイズを変える</button>
+            </div>
         </div>
+        <div class="modeWrap">
+            <p>ダウンロード(DL)モード</p>
+            <div class="modeWrap_field">
+                <span class="mode" data-mode="multiple">選択DL</span><span class="mode" data-mode="single">個別DL</span>
+            </div>
         </div>
     </div>
 </div>
@@ -148,8 +263,15 @@
     <a id="maxButton" class="button">全部表示</a>
 </div>
 <div id="imagesField" class="gallery"></div>
-<div style="position: fixed;left: 0;bottom: 0;padding: 6px;padding-top:0;background: #ffd5af;width: 100%">
-    <p style="margin:0;padding-bottom: 6px;margin-bottom: 6px;border-bottom: solid 1px white;font-weight: bold;color: black">☆出力設定</p>
+<div class="fixFooter"
+     style="position: fixed;left: 0;bottom: 0;padding: 6px;padding-top:0;background: #ffd5af;width: 100%">
+    <div style="align-items: center; margin:0;padding-bottom: 6px;margin-bottom: 6px;border-bottom: solid 1px white;font-weight: bold;color: black;display: flex;justify-content: space-between">
+        <p>☆出力設定</p>
+        <div class="eventBtnWrap">
+            <div class="def">元サイズDL(選択)</div>
+            <div class="resize">リサイズDL(選択)</div>
+        </div>
+    </div>
     <div style="display: flex;width: 100%;">
         <div style="flex: 1;"><label>フォルダ名:<input type="text" value="" id="folder"></label></div>
         <div style="flex: 1;"><label>ファイル名:<input type="text" value="image" id="file"></label>.png</div>
