保存ファイル名のカスタマイズが出来るような機能を追加

--- a/action/index.html
+++ b/action/index.html
@@ -274,6 +274,12 @@
             <div class="def">元サイズDL(選択)</div>
             <div class="resize">リサイズDL(選択)</div>
         </div>
+        <div class="fileTemplate">
+            <select id="fileNameTemplate">
+
+            </select>
+            <a id="toSetting">設定</a>
+        </div>
     </div>
     <div style="display: flex;width: 100%;">
         <div style="flex: 1;"><label>フォルダ名:<input type="text" value="" id="folder"></label></div>
