テンプレートの保存件数に上限を設けた

--- a/option/index.html
+++ b/option/index.html
@@ -93,6 +93,7 @@
 </h2>
 <fieldset class="newFormat">
     <div>
+        <p>テンプレートは5件まで保存できます。</p>
         <div  class="formatBlock">
             <div>
                 <span>時間</span>:
